--- a/sign_language_project/learn.ipynb
+++ b/sign_language_project/learn.ipynb
@@ -4891,34 +4891,120 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 2s 2s/step\n"
+      "1/1 [==============================] - 0s 446ms/step\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "pred = model.predict(x_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      " Layer (type)                Output Shape              Param #   \n",
+      "=================================================================\n",
+      " lstm (LSTM)                 (None, 30, 64)            442112    \n",
+      "                                                                 \n",
+      " lstm_1 (LSTM)               (None, 30, 128)           98816     \n",
+      "                                                                 \n",
+      " lstm_2 (LSTM)               (None, 64)                49408     \n",
+      "                                                                 \n",
+      " dense (Dense)               (None, 64)                4160      \n",
+      "                                                                 \n",
+      " dense_1 (Dense)             (None, 32)                2080      \n",
+      "                                                                 \n",
+      " dense_2 (Dense)             (None, 3)                 99        \n",
+      "                                                                 \n",
+      "=================================================================\n",
+      "Total params: 596675 (2.28 MB)\n",
+      "Trainable params: 596675 (2.28 MB)\n",
+      "Non-trainable params: 0 (0.00 Byte)\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[6.4366120e-17, 1.3421800e-32, 1.0000000e+00],\n",
-       "       [2.1051582e-11, 1.0000000e+00, 6.0734945e-11],\n",
-       "       [1.0000000e+00, 6.3045312e-11, 4.9732511e-09],\n",
-       "       [1.0000000e+00, 6.3045312e-11, 4.9732511e-09],\n",
-       "       [6.4366120e-17, 1.3421802e-32, 1.0000000e+00]], dtype=float32)"
+       "'hello'"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.predict(x_test)"
+    "actions[np.argmax(pred[3])]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actions[np.argmax(y_test[3])]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "saving model/weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.save('sign_model.keras')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
